<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.peter.toptrumps.RulesActivity">

    <TextView
        android:id="@+id/rules_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/rules_header_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rules_text"
        android:layout_width="335dp"
        android:layout_height="340dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="21dp"
        android:isScrollContainer="false"
        android:lineSpacingExtra="6sp"
        android:overScrollMode="always"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:text="@string/rules_text"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/play_game_btn"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rules_header_text" />

    <Button
        android:id="@+id/play_game_btn"
        android:layout_width="125dp"
        android:layout_height="49dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:onClick="playGameButtonOnClick"
        android:text="@string/play_game_btn_text"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/user_name_text"
        android:layout_width="198dp"
        android:layout_height="53dp"
        android:layout_marginBottom="31dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/hint_please_enter_your_name"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/play_game_btn"
        app:layout_constraintTop_toTopOf="@+id/play_game_btn"
        android:layout_marginTop="0dp"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteY="443dp" />
</android.support.constraint.ConstraintLayout>
