<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.peter.toptrumps.TopCardActivity">

    <ImageView
        android:id="@+id/player_top_card_backplate"
        android:layout_width="300dp"
        android:layout_height="403dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="#424242"
        android:contentDescription="@string/player_top_card_black_backplate"
        android:padding="3dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/confirm_selection_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_card_activity_title"
        app:layout_constraintVertical_bias="0.181"
        app:srcCompat="@drawable/card_background" />

    <TextView
        android:id="@+id/character_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="18dp"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_card_activity_title"
        tools:text="Character Name" />

    <ImageView
        android:id="@+id/character_image"
        android:layout_width="258dp"
        android:layout_height="179dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="#424242"
        android:contentDescription="@string/character_image"
        android:padding="2dp"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="@+id/player_top_card_backplate"
        app:layout_constraintRight_toRightOf="@+id/player_top_card_backplate"
        app:layout_constraintTop_toBottomOf="@+id/character_name_text"
        app:srcCompat="@drawable/rick_and_morty_title"
        app:layout_constraintHorizontal_bias="0.575"
        tools:layout_editor_absoluteY="99dp" />

    <TextView
        android:id="@+id/intellect_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:text="@string/intellect_text"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_image" />

    <TextView
        android:id="@+id/intellect_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="0dp"
        android:textAlignment="textEnd"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/intellect_text"
        app:layout_constraintTop_toTopOf="@+id/intellect_text"
        tools:text="i / 100"
        app:layout_constraintRight_toLeftOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.86" />

    <TextView
        android:id="@+id/lethality_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="14dp"
        android:text="@string/lethality_text"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intellect_text" />

    <TextView
        android:id="@+id/lethality_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="0dp"
        android:textAlignment="textEnd"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/lethality_text"
        app:layout_constraintTop_toTopOf="@+id/lethality_text"
        tools:text="l / 100"
        app:layout_constraintRight_toRightOf="@+id/intellect_value_text"
        app:layout_constraintHorizontal_bias="0.882" />

    <TextView
        android:id="@+id/morality_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="13dp"
        android:text="@string/morality_text"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lethality_text" />

    <TextView
        android:id="@+id/morality_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="1dp"
        android:textAlignment="textEnd"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/morality_text"
        app:layout_constraintTop_toTopOf="@+id/morality_text"
        tools:text="m / 100"
        app:layout_constraintRight_toRightOf="@+id/lethality_value_text"
        app:layout_constraintHorizontal_bias="0.893" />

    <TextView
        android:id="@+id/howSchwifty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="15dp"
        android:text="@string/how_schwifty_text"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/morality_text" />

    <TextView
        android:id="@+id/howSchwifty_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="-4dp"
        android:textAlignment="textEnd"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/howSchwifty_text"
        app:layout_constraintTop_toTopOf="@+id/howSchwifty_text"
        tools:text="s / 10"
        app:layout_constraintRight_toRightOf="@+id/morality_value_text"
        app:layout_constraintHorizontal_bias="0.697" />

    <Button
        android:id="@+id/confirm_selection_btn"
        android:layout_width="206dp"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        android:onClick="confirmSelectionOnClick"
        android:text="@string/confirm_selection"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="457dp"
        tools:layout_editor_absoluteX="85dp"
        app:layout_constraintHorizontal_bias="0.504" />

    <TextView
        android:id="@+id/top_card_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/player_top_card_title_text"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.502" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        app:layout_constraintRight_toRightOf="@+id/character_image"
        app:layout_constraintTop_toTopOf="@+id/intellect_value_text"
        android:layout_marginTop="0dp">

        <RadioButton
            android:id="@+id/intellect_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginBottom="14dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="0dp"
            app:buttonTint="@android:color/background_light"
            app:layout_constraintRight_toRightOf="@+id/character_image"
            app:layout_constraintTop_toTopOf="@+id/intellect_text" />

        <RadioButton
            android:id="@+id/lethality_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginBottom="14dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="0dp"
            app:buttonTint="@android:color/background_light"
            app:layout_constraintRight_toRightOf="@+id/character_image"
            app:layout_constraintTop_toBottomOf="@+id/intellect_radio_btn" />

        <RadioButton
            android:id="@+id/morality_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginBottom="14dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="0dp"
            app:buttonTint="@android:color/background_light"
            app:layout_constraintRight_toRightOf="@+id/character_image"
            app:layout_constraintTop_toBottomOf="@+id/lethality_radio_btn" />

        <RadioButton
            android:id="@+id/howSchwifty_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="0dp"
            app:buttonTint="@android:color/background_light"
            app:layout_constraintRight_toRightOf="@+id/character_image"
            app:layout_constraintTop_toBottomOf="@+id/morality_radio_btn" />
    </RadioGroup>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical" />

</android.support.constraint.ConstraintLayout>
