<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rick_and_morty_bg_2"
    tools:context="com.example.peter.toptrumps.MainActivity">

    <TextView
        android:id="@+id/round_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Round 1 (Peter's Turn)"
        app:layout_constraintHorizontal_bias="0.504" />

    <ImageView
        android:id="@+id/CPU_user_image"
        android:layout_width="99dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/cpu_user_image_content_description"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cpu"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/CPU_user_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:textAlignment="textEnd"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/CPU_user_image"
        app:layout_constraintTop_toTopOf="@+id/CPU_user_image"
        tools:text="CPU user name" />

    <TextView
        android:id="@+id/CPU_user_wins_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintRight_toLeftOf="@+id/CPU_user_image"
        app:layout_constraintTop_toBottomOf="@+id/CPU_user_name_text"
        tools:text="CPU game wins" />

    <TextView
        android:id="@+id/CPU_user_num_cards_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintRight_toLeftOf="@+id/CPU_user_image"
        app:layout_constraintTop_toBottomOf="@+id/CPU_user_wins_text"
        tools:text="CPU number of cards" />

    <Button
        android:id="@+id/play_round_btn"
        android:layout_width="345dp"
        android:layout_height="226dp"
        android:layout_marginBottom="125dp"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="#000f0f0f"
        android:onClick="playRoundButtonOnClick"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/number_cards_in_pile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/user_image"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_round_btn"
        app:layout_constraintVertical_bias="0.7"
        tools:text="2 Cards in the Pile" />

    <TextView
        android:id="@+id/round_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="0dp"
        android:text="@string/round_text"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/user_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CPU_user_image"
        app:layout_constraintVertical_bias="0.502" />

    <TextView
        android:id="@+id/play_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/play_text"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/user_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CPU_user_image"
        app:layout_constraintVertical_bias="0.502" />

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="82dp"
        android:layout_height="85dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/user_image_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/rick" />

    <TextView
        android:id="@+id/user_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/user_wins_text"
        app:layout_constraintLeft_toRightOf="@+id/user_image"
        tools:text="User name" />

    <TextView
        android:id="@+id/user_wins_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/user_num_cards_text"
        app:layout_constraintLeft_toRightOf="@+id/user_image"
        tools:text="User game wins" />

    <TextView
        android:id="@+id/user_num_cards_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/user_image"
        app:layout_constraintLeft_toRightOf="@+id/user_image"
        tools:text="User number of cards" />

</android.support.constraint.ConstraintLayout>
